# earthquake-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  zofia_environment.yml
notebooks/: CUBRD_IBL.ipynb  M042_2024_11_27_15_15.ipynb  M044_2024_12_04_09_30.ipynb  M044_2024_12_04_09_30_ioana.ipynb  M044_2024_12_04_09_30_martin.ipynb  M046_2024_12_18_16_00.ipynb  M046_2024_12_18_16_00_martin.ipynb  test_curbd.ipynb
notebooks/M042/: M042_2024_11_27_15_15.ipynb
notebooks/M044/: M044_2024_12_04_09_30_martin.ipynb  M044_2024_12_04_09_30_martin_new_bnd.ipynb  M044_2024_12_04_09_30_martin_test_new_bnd.ipynb  M044_2024_12_04_09_30_zofia_CURBD.ipynb  M044_2024_12_04_09_30_zofia_continous_model.ipynb  M044_2024_12_04_09_30_zofia_parameter_testing.ipynb  M044_2024_12_04_09_30_zofia_whole_data_RNN.ipynb  report.ipynb  rnn_and_curbd_single_trial_param_sweep.csv
notebooks/M046/: M046_2024_12_18_16_00_martin_old_bnd.ipynb
notebooks/M061/: M061_ioana.ipynb
notebooks/M062/: curbd_m062.ipynb  report.ipynb  test_pose_estimation.ipynb  train_curbd_gpu.py
notebooks/M063/: report.ipynb
notebooks/combining_sessions/: classifier_analysis.ipynb  classifier_angle_analysis.ipynb  classifier_level_analysis.ipynb  curbd_analysis.ipynb  rnn_analysis.ipynb
notebooks/pipelines/: delayed_rrr.py  lstm.ipynb  pcs_for_vaf.py  pr_isomap.py  rrr.ipynb  run_pr_all_session.py
notebooks/rnn_and_curbd_modelling/: all_models_analysis.ipynb
notebooks/testing_stuff/: test_curbd.ipynb  (+3 more)
toolkit/: logging.py
tools/: dataTools.py  decodeTools.py  params.py  utilityTools.py
utils/: preprocessing.py
(+67 files in other folders)
